// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssuePickerHeader should match the altered style by the prop headerStyles 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                MockedScreen
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              handlerTag={7}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "backgroundColor": "#052962",
                            "flexDirection": "row",
                            "justifyContent": "flex-end",
                            "paddingVertical": 10,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignSelf": "flex-end",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "width": "100%",
                            },
                            [
                              {
                                "marginTop": 20,
                              },
                              {
                                "height": 49,
                              },
                            ],
                            undefined,
                          ]
                        }
                      >
                        <View>
                          <View
                            style={
                              {
                                "paddingLeft": 14,
                                "width": 90,
                                "zIndex": 2,
                              }
                            }
                          >
                            <View
                              accessibilityHint="Navigates to the settings screen"
                              accessibilityLabel="Settings button"
                              accessibilityRole="button"
                              accessibilityState={
                                {
                                  "busy": undefined,
                                  "checked": undefined,
                                  "disabled": undefined,
                                  "expanded": undefined,
                                  "selected": undefined,
                                }
                              }
                              accessibilityValue={
                                {
                                  "max": undefined,
                                  "min": undefined,
                                  "now": undefined,
                                  "text": undefined,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              hitSlop={
                                {
                                  "bottom": 10,
                                  "left": 10,
                                  "right": 10,
                                  "top": 10,
                                }
                              }
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                {
                                  "opacity": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "alignItems": "center",
                                      "borderRadius": 999,
                                      "height": 42,
                                      "justifyContent": "center",
                                      "paddingHorizontal": 21,
                                    },
                                    {
                                      "backgroundColor": undefined,
                                      "borderColor": "#FFFFFF",
                                      "borderWidth": 1,
                                    },
                                    {
                                      "alignItems": "center",
                                      "aspectRatio": 1,
                                      "justifyContent": "center",
                                      "paddingHorizontal": 0,
                                      "width": 42,
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                <Text
                                  allowFontScaling={false}
                                  style={
                                    [
                                      {
                                        "fontFamily": "GuardianIcons-Regular",
                                        "fontSize": 20,
                                        "lineHeight": 20,
                                      },
                                      [
                                        {
                                          "color": "#FFFFFF",
                                        },
                                        undefined,
                                      ],
                                    ]
                                  }
                                >
                                  
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "flex": 1,
                                "flexDirection": "row",
                                "justifyContent": "flex-start",
                              },
                              {
                                "width": 0,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "flex": 1,
                                  "flexDirection": "row",
                                },
                                {
                                  "justifyContent": "space-between",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                {
                                  "marginRight": 14,
                                }
                              }
                            >
                              <RNGestureHandlerButton
                                collapsable={false}
                                delayLongPress={600}
                                enabled={true}
                                exclusive={true}
                                handlerTag={8}
                                handlerType="NativeViewGestureHandler"
                                onGestureEvent={[Function]}
                                onGestureHandlerEvent={[Function]}
                                onGestureHandlerStateChange={[Function]}
                                onHandlerStateChange={[Function]}
                                rippleColor={0}
                                touchSoundDisabled={false}
                              >
                                <View
                                  accessible={true}
                                  collapsable={false}
                                  style={
                                    {
                                      "opacity": 1,
                                    }
                                  }
                                >
                                  <View />
                                </View>
                              </RNGestureHandlerButton>
                            </View>
                            <View
                              style={
                                {
                                  "paddingRight": 14,
                                }
                              }
                            >
                              <View
                                accessibilityHint="Returns to the edition"
                                accessibilityLabel="Close button"
                                accessibilityRole="button"
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": undefined,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                hitSlop={
                                  {
                                    "bottom": 10,
                                    "left": 10,
                                    "right": 10,
                                    "top": 10,
                                  }
                                }
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  {
                                    "opacity": 1,
                                  }
                                }
                              >
                                <View
                                  style={
                                    [
                                      {
                                        "alignItems": "center",
                                        "borderRadius": 999,
                                        "height": 42,
                                        "justifyContent": "center",
                                        "paddingHorizontal": 21,
                                      },
                                      {
                                        "backgroundColor": "#ffe500",
                                      },
                                      {
                                        "alignItems": "center",
                                        "aspectRatio": 1,
                                        "justifyContent": "center",
                                        "paddingHorizontal": 0,
                                        "width": 42,
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  <Text
                                    allowFontScaling={false}
                                    style={
                                      [
                                        {
                                          "fontFamily": "GuardianIcons-Regular",
                                          "fontSize": 20,
                                          "lineHeight": 20,
                                        },
                                        [
                                          {
                                            "color": "#121212",
                                          },
                                          undefined,
                                        ],
                                      ]
                                    }
                                  >
                                    
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`IssuePickerHeader should match the default style 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                MockedScreen
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              handlerTag={1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "backgroundColor": "#052962",
                            "flexDirection": "row",
                            "justifyContent": "flex-end",
                            "paddingVertical": 10,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignSelf": "flex-end",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "width": "100%",
                            },
                            [
                              {
                                "marginTop": 20,
                              },
                              {
                                "height": 49,
                              },
                            ],
                            undefined,
                          ]
                        }
                      >
                        <View>
                          <View
                            style={
                              {
                                "paddingLeft": 14,
                                "width": 90,
                                "zIndex": 2,
                              }
                            }
                          >
                            <View
                              accessibilityHint="Navigates to the settings screen"
                              accessibilityLabel="Settings button"
                              accessibilityRole="button"
                              accessibilityState={
                                {
                                  "busy": undefined,
                                  "checked": undefined,
                                  "disabled": undefined,
                                  "expanded": undefined,
                                  "selected": undefined,
                                }
                              }
                              accessibilityValue={
                                {
                                  "max": undefined,
                                  "min": undefined,
                                  "now": undefined,
                                  "text": undefined,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              hitSlop={
                                {
                                  "bottom": 10,
                                  "left": 10,
                                  "right": 10,
                                  "top": 10,
                                }
                              }
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                {
                                  "opacity": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "alignItems": "center",
                                      "borderRadius": 999,
                                      "height": 42,
                                      "justifyContent": "center",
                                      "paddingHorizontal": 21,
                                    },
                                    {
                                      "backgroundColor": undefined,
                                      "borderColor": "#FFFFFF",
                                      "borderWidth": 1,
                                    },
                                    {
                                      "alignItems": "center",
                                      "aspectRatio": 1,
                                      "justifyContent": "center",
                                      "paddingHorizontal": 0,
                                      "width": 42,
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                <Text
                                  allowFontScaling={false}
                                  style={
                                    [
                                      {
                                        "fontFamily": "GuardianIcons-Regular",
                                        "fontSize": 20,
                                        "lineHeight": 20,
                                      },
                                      [
                                        {
                                          "color": "#FFFFFF",
                                        },
                                        undefined,
                                      ],
                                    ]
                                  }
                                >
                                  
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "flex": 1,
                                "flexDirection": "row",
                                "justifyContent": "flex-start",
                              },
                              {
                                "width": 0,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "flex": 1,
                                  "flexDirection": "row",
                                },
                                {
                                  "justifyContent": "space-between",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                {
                                  "marginRight": 14,
                                }
                              }
                            >
                              <RNGestureHandlerButton
                                collapsable={false}
                                delayLongPress={600}
                                enabled={true}
                                exclusive={true}
                                handlerTag={2}
                                handlerType="NativeViewGestureHandler"
                                onGestureEvent={[Function]}
                                onGestureHandlerEvent={[Function]}
                                onGestureHandlerStateChange={[Function]}
                                onHandlerStateChange={[Function]}
                                rippleColor={0}
                                touchSoundDisabled={false}
                              >
                                <View
                                  accessible={true}
                                  collapsable={false}
                                  style={
                                    {
                                      "opacity": 1,
                                    }
                                  }
                                >
                                  <View />
                                </View>
                              </RNGestureHandlerButton>
                            </View>
                            <View
                              style={
                                {
                                  "paddingRight": 14,
                                }
                              }
                            >
                              <View
                                accessibilityHint="Returns to the edition"
                                accessibilityLabel="Close button"
                                accessibilityRole="button"
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": undefined,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                hitSlop={
                                  {
                                    "bottom": 10,
                                    "left": 10,
                                    "right": 10,
                                    "top": 10,
                                  }
                                }
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  {
                                    "opacity": 1,
                                  }
                                }
                              >
                                <View
                                  style={
                                    [
                                      {
                                        "alignItems": "center",
                                        "borderRadius": 999,
                                        "height": 42,
                                        "justifyContent": "center",
                                        "paddingHorizontal": 21,
                                      },
                                      {
                                        "backgroundColor": "#ffe500",
                                      },
                                      {
                                        "alignItems": "center",
                                        "aspectRatio": 1,
                                        "justifyContent": "center",
                                        "paddingHorizontal": 0,
                                        "width": 42,
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  <Text
                                    allowFontScaling={false}
                                    style={
                                      [
                                        {
                                          "fontFamily": "GuardianIcons-Regular",
                                          "fontSize": 20,
                                          "lineHeight": 20,
                                        },
                                        [
                                          {
                                            "color": "#121212",
                                          },
                                          undefined,
                                        ],
                                      ]
                                    }
                                  >
                                    
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`IssuePickerHeader should match the default style with a subTitle 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                MockedScreen
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              handlerTag={4}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "backgroundColor": "#052962",
                            "flexDirection": "row",
                            "justifyContent": "flex-end",
                            "paddingVertical": 10,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignSelf": "flex-end",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "width": "100%",
                            },
                            [
                              {
                                "marginTop": 20,
                              },
                              {
                                "height": 49,
                              },
                            ],
                            undefined,
                          ]
                        }
                      >
                        <View>
                          <View
                            style={
                              {
                                "paddingLeft": 14,
                                "width": 90,
                                "zIndex": 2,
                              }
                            }
                          >
                            <View
                              accessibilityHint="Navigates to the settings screen"
                              accessibilityLabel="Settings button"
                              accessibilityRole="button"
                              accessibilityState={
                                {
                                  "busy": undefined,
                                  "checked": undefined,
                                  "disabled": undefined,
                                  "expanded": undefined,
                                  "selected": undefined,
                                }
                              }
                              accessibilityValue={
                                {
                                  "max": undefined,
                                  "min": undefined,
                                  "now": undefined,
                                  "text": undefined,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              hitSlop={
                                {
                                  "bottom": 10,
                                  "left": 10,
                                  "right": 10,
                                  "top": 10,
                                }
                              }
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                {
                                  "opacity": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "alignItems": "center",
                                      "borderRadius": 999,
                                      "height": 42,
                                      "justifyContent": "center",
                                      "paddingHorizontal": 21,
                                    },
                                    {
                                      "backgroundColor": undefined,
                                      "borderColor": "#FFFFFF",
                                      "borderWidth": 1,
                                    },
                                    {
                                      "alignItems": "center",
                                      "aspectRatio": 1,
                                      "justifyContent": "center",
                                      "paddingHorizontal": 0,
                                      "width": 42,
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                <Text
                                  allowFontScaling={false}
                                  style={
                                    [
                                      {
                                        "fontFamily": "GuardianIcons-Regular",
                                        "fontSize": 20,
                                        "lineHeight": 20,
                                      },
                                      [
                                        {
                                          "color": "#FFFFFF",
                                        },
                                        undefined,
                                      ],
                                    ]
                                  }
                                >
                                  
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "flex": 1,
                                "flexDirection": "row",
                                "justifyContent": "flex-start",
                              },
                              {
                                "width": 0,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "flex": 1,
                                  "flexDirection": "row",
                                },
                                {
                                  "justifyContent": "space-between",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                {
                                  "marginRight": 14,
                                }
                              }
                            >
                              <RNGestureHandlerButton
                                collapsable={false}
                                delayLongPress={600}
                                enabled={true}
                                exclusive={true}
                                handlerTag={5}
                                handlerType="NativeViewGestureHandler"
                                onGestureEvent={[Function]}
                                onGestureHandlerEvent={[Function]}
                                onGestureHandlerStateChange={[Function]}
                                onHandlerStateChange={[Function]}
                                rippleColor={0}
                                touchSoundDisabled={false}
                              >
                                <View
                                  accessible={true}
                                  collapsable={false}
                                  style={
                                    {
                                      "opacity": 1,
                                    }
                                  }
                                >
                                  <View />
                                </View>
                              </RNGestureHandlerButton>
                            </View>
                            <View
                              style={
                                {
                                  "paddingRight": 14,
                                }
                              }
                            >
                              <View
                                accessibilityHint="Returns to the edition"
                                accessibilityLabel="Close button"
                                accessibilityRole="button"
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": undefined,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                hitSlop={
                                  {
                                    "bottom": 10,
                                    "left": 10,
                                    "right": 10,
                                    "top": 10,
                                  }
                                }
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  {
                                    "opacity": 1,
                                  }
                                }
                              >
                                <View
                                  style={
                                    [
                                      {
                                        "alignItems": "center",
                                        "borderRadius": 999,
                                        "height": 42,
                                        "justifyContent": "center",
                                        "paddingHorizontal": 21,
                                      },
                                      {
                                        "backgroundColor": "#ffe500",
                                      },
                                      {
                                        "alignItems": "center",
                                        "aspectRatio": 1,
                                        "justifyContent": "center",
                                        "paddingHorizontal": 0,
                                        "width": 42,
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  <Text
                                    allowFontScaling={false}
                                    style={
                                      [
                                        {
                                          "fontFamily": "GuardianIcons-Regular",
                                          "fontSize": 20,
                                          "lineHeight": 20,
                                        },
                                        [
                                          {
                                            "color": "#121212",
                                          },
                                          undefined,
                                        ],
                                      ]
                                    }
                                  >
                                    
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
